// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CFormFloating customize 1`] = `
<div>
  <div
    class="form-floating bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CFormFloating component 1`] = `
<div>
  <div
    class="form-floating"
  />
</div>
`;
